Remarcar matches durante la busqueda

--- a/frontend/ing_log_reader/css/style.css
+++ b/frontend/ing_log_reader/css/style.css
@@ -49,8 +49,17 @@
 
 	height: 100%;
     overflow: scroll;
+    overflow-x: hidden;
+    padding: 5px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #content_log_options{
 	
+}
+
+.log_match{
+
+    color: red;
+    display: inline-block;
 }
